tests/fail/semantic/infixExp-5.tiger
let
      var x : int
in
      x := "Hello" <> 1
end
